@@ -228,21 +228,22 @@ public interface IterationThreadProvider extends ThreadCountProvider
 		///////////////////////////////////////////////////////////////////////////
 		// instance fields //
 		////////////////////
-				
+
 		private final BulkList<PoolThread>            reservedThreads ;
 		private final BulkList<LimitList<PoolThread>> allocatedThreads;
-			
-			
-		
+
+
+
 		///////////////////////////////////////////////////////////////////////////
 		// constructors //
 		/////////////////
-		
+
 		Pooling(final int reservedThreadCount, final ThreadCountProvider threadCountProvider)
 		{
 			super(threadCountProvider);
 			this.reservedThreads  = BulkList.New(reservedThreadCount);
 			this.allocatedThreads = BulkList.New();
+			Cleaners.SHARED.register(this, new Cleanup(this.reservedThreads));
 		}
 		
 		
@@ -334,14 +335,19 @@ public interface IterationThreadProvider extends ThreadCountProvider
 		}
 		
 		@Override
-		public void shutdown()
+		public synchronized void shutdown()
 		{
-			this.internalShutdown();
+			// Synchronous deactivation. Does NOT cancel the registered Cleaner —
+			// if the pool is reused after shutdown, threads added later will
+			// still be deactivated on GC of this Pooling instance.
+			// `synchronized` matches startIterationThreads/disposeIterationThreads
+			// so concurrent shutdown does not race with reservedThreads mutation.
+			deactivateAllReservedThreads(this.reservedThreads);
 		}
-		
-		private void internalShutdown()
+
+		private static void deactivateAllReservedThreads(final BulkList<PoolThread> reservedThreads)
 		{
-			this.reservedThreads.iterate(t ->
+			reservedThreads.iterate(t ->
 			{
 				synchronized(t)
 				{
@@ -349,16 +355,31 @@ public interface IterationThreadProvider extends ThreadCountProvider
 					t.notifyAll(); // must notify to wake up inactive thread from waiting for work.
 				}
 			});
-			this.reservedThreads.truncate();
+			reservedThreads.truncate();
 		}
-		
-		@SuppressWarnings("deprecation")
-		@Override
-		protected void finalize() throws Throwable
+
+		// Holds the reserved-thread list for Cleaner-based shutdown.
+		//
+		// MUST be a static nested class — capturing the enclosing Pooling
+		// would keep it strongly reachable and prevent the Cleaner from firing.
+		// PoolThread is `static final` and holds no back-reference to Pooling,
+		// so Pooling can be reclaimed independently of its threads.
+		private static final class Cleanup implements Runnable
 		{
-			this.internalShutdown();
+			private final BulkList<PoolThread> reservedThreads;
+
+			Cleanup(final BulkList<PoolThread> reservedThreads)
+			{
+				this.reservedThreads = reservedThreads;
+			}
+
+			@Override
+			public void run()
+			{
+				deactivateAllReservedThreads(this.reservedThreads);
+			}
 		}
-		
+
 	}
 	
 	
